[tool.poetry]
name = "sa-repository"
version = "0.1.0"
description = ""
authors = ["Gasper3 <trzecik65@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
