[project]
name = "sa-repository"
version = "1.2.0"
description = "Repository pattern for SQLAlchemy models"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Gasper3", email = "trzecik65@gmail.com"},
]
keywords = ["sqlalchemy", "repository-pattern", "orm", "repository"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "sqlalchemy>=2.0.2",
    "more-itertools>=9.1.0",
]

[project.urls]
Homepage = "https://github.com/Gasper3/sa-repository"
Repository = "https://github.com/Gasper3/sa-repository"

[dependency-groups]
dev = [
    "coverage>=7.1.0",
    "pytest",
    "ruff>=0.9.0",
    "factory-boy>=3.2.1",
    "psycopg2>=2.9.5",
    "mypy>=1.1.1",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sa_repository"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "read",
    "write",
]
